--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,7 +9,7 @@ body{
   flex-direction: column;
   align-items: center; /* Pusatkan vertikal */
   justify-content: center; /* Pusatkan horizontal */
-  background-image: url('/assets/image/BG.png');
+  background-image: url('./assets/image/BG.png');
   background-size: cover;
   background-position: center;
   width: 100%;
